--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev:json-server": "json-server --read-only --routes ./json-server/routes.json --port 8181 --watch ./json-server/db.json",
     "build": "run-s build:*",
     "build:update-bulma-colors": "bulma-css-vars",
-    "build:tailwind": "tailwindcss -i ./src/scss/tailwind.scss -o ./dist/tailwind.css --watch",
+    "build:tailwind": "tailwindcss -i ./src/scss/tailwind.scss -o ./dist/tailwind.css",
     "build:vite": "cross-env NODE_ENV=production vite build",
     "ssr:build": "run-s build:update-bulma-colors ssr:build:*",
     "ssr:build:client": "cross-env SSR_BUILD=true NODE_ENV=production vite build --ssrManifest --outDir dist/client",
